--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Link Tests</title>
   </head>
   <body>
   <h1>Testing Different Link Formats SMS and Mailto<h1/>
     <a href="mailto:mcpd@marietta.edu?subject=Escort request from MCPD website&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">mailto:mcpd@marietta.edu?subject=Escort request from MCPD website&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
-    
+    <ul>
+        <li>This works correctly on windows 11 PC with Chrome</li>
+    </ul>
+    <!-- <a href="mailto:mcpd@marietta.edu?subject=Escort request from MCPD website?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">mailto:mcpd@marietta.edu?subject=Escort request from MCPD website?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <ul>
+        <li>Entire Email is in subject. Don't use</li>
+    </ul> -->
+    <a href="sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <ul>
+        <li>Untested</li>
+    </ul>
+    <a href="sms://+17402360217?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <ul>
+        <li>Untested</li>
+    </ul>
+    <a href="sms:/7402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms:/7402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <ul>
+        <li>Untested</li>
+    </ul>
   </body>
 </html>
