--- a/index.html
+++ b/index.html
@@ -7,24 +7,34 @@
     <title>Link Tests</title>
   </head>
   <body>
-  <h1>Testing Different Link Formats SMS and Mailto<h1/>
+  <h1>Testing Different Link Formats SMS and Mailto</h1>
+  <h2>1</h2>
     <a href="mailto:mcpd@marietta.edu?subject=Escort request from MCPD website&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">mailto:mcpd@marietta.edu?subject=Escort request from MCPD website&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
         <li>This works correctly on windows 11 PC with Chrome</li>
+        <li>Works correctly on Android on Chrome</li>
     </ul>
     <!-- <a href="mailto:mcpd@marietta.edu?subject=Escort request from MCPD website?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">mailto:mcpd@marietta.edu?subject=Escort request from MCPD website?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
         <li>Entire Email is in subject. Don't use</li>
     </ul> -->
+    <h2>2</h2>
     <a href="sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Untested</li>
+        <li>Doesn't work correctly on android. Number is entire query string</li>
     </ul>
+    <h2>3</h2>
     <a href="sms://+17402360217?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Untested</li>
+        <li>Works correctly on android</li>
     </ul>
+    <h2>4</h2>
     <a href="sms:/7402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms:/7402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <ul>
+        <li>Doesn't work on android. Number is entire query string.</li>
+    </ul>
+    <h2>5</h2>
+    <a href="sms://+17402360217;body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217;body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
         <li>Untested</li>
     </ul>
