--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
         <li>Works correctly on android</li>
     </ul>
     <h2>4</h2>
-    <a href="sms:/7402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms:/7402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <a href="sms:/+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms:/+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Doesn't work on android. Number is entire query string.</li>
+        <li>Untested</li>
     </ul>
     <h2>5</h2>
     <a href="sms://+17402360217;body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217;body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
+    <ul>
+        <li>Untested</li>
+    </ul>
+    <h2>6</h2>
+    <a href="sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
         <li>Untested</li>
     </ul>
