--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>2</h2>
     <a href="sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Doesn't work correctly on android. Number is entire query string</li>
+        <li>Doesn't work correctly on android w/ chrome. Number is entire query string</li>
     </ul>
     <h2>3</h2>
     <a href="sms://+17402360217?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217?body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
@@ -31,17 +31,17 @@
     <h2>4</h2>
     <a href="sms:/+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms:/+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Untested</li>
+        <li>Doesn't work on android w/ chrome. Number is entire url.</li>
     </ul>
     <h2>5</h2>
     <a href="sms://+17402360217;body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217;body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Untested</li>
+        <li>Doesn't work on android w/ chrome. Sends to multiple numbers</li>
     </ul>
     <h2>6</h2>
     <a href="sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'">sms://+17402360217&body=Escort request from MCPD website: Student name: 'test Location description: 'test' Destination description: 'test' Clothing description: 'test' Vehicle description:'test'</a>
     <ul>
-        <li>Untested</li>
+        <li>Doesn't work on android w/ chrome. Number is entire url</li>
     </ul>
   </body>
 </html>
